# Monad

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_9.txt  comparison_result.txt  compile_inequality.txt  compile_inequality_2.txt  compile_inequality_3.txt  compile_log.txt  compile_log_2.txt  compile_ssj.txt  debug_config.json  debug_demo.py  debug_fiscal_logic.py  debug_output.txt  debug_output_v2.txt  diag.txt  dist_2asset.csv  engine_log.txt  ge_irf.csv  general_equilibrium.csv  gui_cockpit.bat  header_log.txt  heatmap_sensitivity.csv  impulse_response.csv  impulse_response.txt  impulse_response_sanity.csv  inequality_path.csv  irf_groups.csv  irf_test.csv  model_config.json  policy_2asset.csv  pyproject.toml  python_log.txt  python_log_v2.txt  run_cockpit.bat  (+16 more)
build2/: ALL_BUILD.vcxproj  CMakeCache.txt  MonadEngine.sln  MonadEngine.vcxproj  MonadEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build3/: ALL_BUILD.vcxproj  CMakeCache.txt  MonadEngine.sln  MonadEngine.vcxproj  MonadEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build3/MonadEngine.dir/Release/: MonadEngine.exe.recipe
build_gpu/: ALL_BUILD.vcxproj  MonadTwoAssetCUDA.sln  MonadTwoAssetCUDA.vcxproj  MonadTwoAssetCUDA.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_gpu/MonadTwoAssetCUDA.dir/Release/: CudaKernels.cu-1455668347.deps  CudaKernels.cu.cache  MonadTwoAssetCUDA.exe.recipe
build_phase3/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  cmake_install.cmake
build_solver/: ALL_BUILD.vcxproj  CMakeCache.txt  DebugDual.vcxproj  DebugDual.vcxproj.filters  MonadEngine.sln  MonadEngine.vcxproj  MonadEngine.vcxproj.filters  SolverTest.vcxproj  SolverTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_solver/DebugDual.dir/Release/: DebugDual.exe.recipe
build_solver/MonadEngine.dir/Release/: MonadEngine.exe.recipe
build_solver/SolverTest.dir/Release/: SolverTest.exe.recipe
docs/: USAGE.md
examples/: killer_demo_2.py  killer_demo_3.py  killer_demo_4.py  killer_demo_5.py  killer_demo_6.py  scenario_fiscal_monetary_trap.py
examples/canonical/: advanced_regime_welfare.py
experiments/: advanced_features_test.py  diag_jac.py  killer_demo.py  lab_experiments.py  learning_test.py  policy_object_test.py  regime_consistency_test.py  verify_logic.py
experiments/canonical/: multi_regime_welfare.py
monad/: __init__.py  api.py  belief.py  blocks.py  cli.py  cpp_backend.py  dsl.py  engine.py  facade.py  gui_main.py  model.py  monad_core.cp310-win_amd64.pyd  nonlinear.py  process.py  regime.py  run_cockpit.bat  solver.py  welfare.py
monad/docs/: CONSTITUTION.md
monad/gui/: app.py  compiler.py  nodes.py  scene.py  styles.py
monad/modeling/: dsge.py  schema.py  ssj.py
monad/monad/: monad_core.cp310-win_amd64.pyd
monad/monad/modeling/: schema.py
monad/monad/monad/: nk_solver.py  plots.py
monad/monad_legacy_backup/: analytics.py  core.py  monad_core_test.cp310-win_amd64.pyd  solver.py
monad/monad_legacy_backup/modeling/: dsge.py  solver.py  ssj.py
monad/monad_legacy_backup/monad/: ge_solver.py  model.py
monad/policy/: __init__.py  core.py  rules.py
monad/solver/: __init__.py  gmres.py
results/: dist_2asset.csv  ge_irf.csv  heatmap_sensitivity.csv  irf_groups.csv  irf_test.csv
scripts/: analyze_log.py  append_debug.py  force_read_log.py  restrict_sources.py  restrict_to_gpu.py  set_cmake_cpu_only.py  write_config.py
scripts/archive/: add_factory_source.py  add_mu_includes.py  create_dummy_jacobians.py  generate_source_list.py  patch_cmake.py  restore_cmake.py  restore_full_cmake.py  set_cmake_explicit.py  set_cmake_standalone.py  set_cmake_test_header.py
scripts/debug/: verify_gui.py  verify_gui_advanced.py
src/: AnalyticalSolver.hpp  DistributionAggregator.hpp  Dual.hpp  Params.hpp  UnifiedGrid.hpp  build_log.txt  main_engine.cpp  main_experiment_tt.cpp  main_three_asset.cpp  main_three_asset_full.cpp  main_two_asset.cpp  runners.hpp  solver_output.txt
src/archive/: AnalyticalSolver.hpp  Engine.hpp  MultiDimGrid4D.hpp  MultiDimGrid5D.hpp  UniversalEngine.cpp  ZigenAdapter.hpp  ZigenNewtonSolver.hpp  ZigenSolver.hpp  benchmark_hybrid_hank.cpp  main_experiment_tt.cpp  python_bindings.cpp  python_bindings_full.cpp
src/backend/: TwoAssetBackend.hpp
src/backend/cpu/: CpuBackend.cpp  CpuBackend.hpp
src/blocks/: FiscalBlock.hpp  IncomeProcessFactory.hpp
src/gpu/: CudaBackendF32.hpp  CudaKernels.cu  CudaKernelsF32.cu  CudaUtils.hpp  HankIndividualGraph.hpp  HankJacobian.hpp  MonadHybridSolver.hpp
src/grid/: MultiDimGrid.hpp
src/io/: json_loader.hpp
src/kernel/: TwoAssetKernel.hpp
src/solver/: TwoAssetSolver.hpp
src/ssj/: JacobianBuilder3D.hpp  JacobianBuilder4D.hpp  aggregator.hpp  jacobian_builder.hpp  ssj_solver.hpp
(+85 files in other folders)
